2009-07-22  Miloslav Trmač  <mitr@redhat.com>

	* src/bridge.py (main): Fix pid file removal.

	* src/bridge.py (bridge_one_request): Handle ForwardingError
	gracefully.

	* src/bridge.py (SignRpmRequestType.forward_reply_payload): Support
	RSA and v4 signatures.

	* src/double_tls.py (_CombiningBuffer.__receive_inner):
	(_CombiningBuffer.__receive_outer, _InnerBridgingBuffer._receive):
	Handle unexpected connection reset, and poll() that does not provide
	any application-level data.
	(_SplittingBuffer._receive): Don't re-raise the exception on reset
	connection.  Simplify a bit.

	* src/bridge.py (bridge_one_request, main)
	* src/server.py (request_handling_child): Log more useful information
	about NSPRError on RHEL5.

2009-07-18  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 0.95.
	* NEWS: Update.

	* src/client.py (ClientsConnection.send_inner)
	(ClientsConnection.read_payload)
	(ClientsConnection.write_payload_to_file)
	(ClientsConnection.__read_header)
	* src/server.py (ServersConnection.read_request)
	(ServersConnection.__send_payload)
	(ServersConnection.send_reply_header): Use M2Crypto.EVP.HMAC instead of
	Python's hmac, which uses incorrect block size in RHEL5.
	* src/utils.py (M2CryptoSHA512DigestMod): Remove.

	* src/utils.py (nss_init._password_callback): Be compatible with both
	python-nss 0.1 and 0.4.

2009-07-17  Miloslav Trmač  <mitr@redhat.com>

	* config/server.conf (database-path): Fix the comments.

2009-07-01  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 0.94.
	* NEWS: Update.

	* README: Note that unmodified python-nss >= 0.4 is required.
	* src/utils.py (nss_init._password_callback): Update for python-nss-0.4.

2009-04-10  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Version 0.93.

	* doc/sigul.1.in: Document import-key.
	* README: Document import-key.

	* doc/protocol-design.txt (import-key): New operation.
	* src/client.py (cmd_import_key): New function.
	(command_handlers): Add cmd_import_key.