@@ -307,12 +307,12 @@ class SignRpmRequestType(RequestType):
                 self.__koji_config = utils.koji_read_config()
                 # self.__request_fields['user'] safety was verified by
                 # self.validate
-                # FIXME FIXME: authenticate should be True, but that needs a
-                # koji account that is allowed to use proxyuser
+                # FIXME FIXME: proxyuser should be enabled, but that needs a
+                # koji account that is allowed to use it
                 self.__koji_session = \
                     utils.koji_connect(self.__koji_config,
-                                       authenticate=False,
-                                       proxyuser=self.__request_fields['user'])
+                                       authenticate=True)
+                                       #proxyuser=self.__request_fields['user'])
             except (utils.KojiError, koji.GenericError), e:
                 raise ForwardingError('Koji connection failed: %s' % str(e))
         return self.__koji_session
