@@ -1,5 +1,9 @@
 2009-07-22  Miloslav Trmač  <mitr@redhat.com>
 
+	* src/bridge.py (SignRpmRequestType.__koji_get_session): Authenticate
+	when connecting to Koji.
+	* README (server): Update.
+
 	* src/bridge.py (main): Fix pid file removal.
 
 	* src/bridge.py (bridge_one_request): Handle ForwardingError
